WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57325
[GTK] http/tests/uri/username-with-no-hostname.html fails
https://bugs.webkit.org/show_bug.cgi?id=57325
Summary
[GTK] http/tests/uri/username-with-no-hostname.html fails
Philippe Normand
Reported
2011-03-29 03:40:30 PDT
--- /home/slave/webkitgtk/gtk-linux-64-debug/build/layout-test-results/http/tests/uri/username-with-no-hostname-expected.txt 2011-03-29 02:40:26.817906132 -0700 +++ /home/slave/webkitgtk/gtk-linux-64-debug/build/layout-test-results/http/tests/uri/username-with-no-hostname-actual.txt 2011-03-29 02:40:26.805911530 -0700 @@ -1,4 +1,3 @@ -Blocked access to external URL
http://user@/localhost:8000/misc/resources/compass.jpg
This test checks that URLs with a username but no hostname do not mistakenly get loaded. If it fails in the browser, you will also see an image. PASS document.getElementsByTagName("img")[0].width is 0 I have a patch for this issue. Will skip the test for now and wait the review :)
Attachments
proposed patch
(3.16 KB, patch)
2011-03-29 03:46 PDT
,
Philippe Normand
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2011-03-29 03:46:30 PDT
Created
attachment 87294
[details]
proposed patch
Philippe Normand
Comment 2
2011-03-29 03:46:57 PDT
Skipped in
http://trac.webkit.org/changeset/82224
Philippe Normand
Comment 3
2011-03-29 09:39:39 PDT
Committed
r82267
: <
http://trac.webkit.org/changeset/82267
>
Philippe Normand
Comment 4
2011-03-29 10:13:37 PDT
And follow-up
http://trac.webkit.org/changeset/82271
to fix http/tests/security/host-compare-case-insensitive.html and http/tests/xmlhttprequest/origin-whitelisting-exact-match.html
WebKit Review Bot
Comment 5
2011-03-29 10:58:15 PDT
http://trac.webkit.org/changeset/82267
might have broken GTK Linux 32-bit Release The following tests are not passing: fast/loader/onload-willSendRequest-null-for-frame.html
Philippe Normand
Comment 6
2011-03-29 11:01:09 PDT
(In reply to
comment #5
)
>
http://trac.webkit.org/changeset/82267
might have broken GTK Linux 32-bit Release > The following tests are not passing: > fast/loader/onload-willSendRequest-null-for-frame.html
See
bug 57362
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug