2011-03-29  Philippe Normand  <pnormand@igalia.com>

Reviewed by Martin Robinson.

        [GTK] http/tests/uri/username-with-no-hostname.html fails
        https://bugs.webkit.org/show_bug.cgi?id=57325

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (willSendRequestCallback): Check URI before submitting the request
        to WebCore.

        Reviewed by Martin Robinson.

        [GTK] http/tests/uri/username-with-no-hostname.html fails
        https://bugs.webkit.org/show_bug.cgi?id=57325

        * platform/gtk/Skipped: Unskip fixed test.

Canonical link: https://commits.webkit.org/72069@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82267 268f45cc-cd09-0410-ab3c-d52691b4dbfc